tests/compile-fail/error-unknown-trait.stderr
error: unknown trait `Baz`
 --> $DIR/error-unknown-trait.rs:8:14
  |
8 | #[derivative(Baz)]
  |              ^^^

error: unknown trait `Baz`
  --> $DIR/error-unknown-trait.rs:14:18
   |
14 |     #[derivative(Baz="wat")]
   |                  ^^^
